--- a/flask/blog/website/templates/home.html
+++ b/flask/blog/website/templates/home.html
@@ -1,5 +1,1 @@
-{% extends "base.html" %}
-{% block title %}Home{% endblock %}
-{% block content %}
-<h1>Hello World</h1>
-{% endblock %}
+{% extends "posts_div.html" %} {% block title %}Home{% endblock %}
